# atlantis-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DETAILS.md  LICENSE  README.md  install.sh  requirements.txt
atlantis-ui/: index.html  package-lock.json  package.json
atlantis-ui/src/: App.tsx  App.tsx.working
backup_20260331_175446/: anomaly.py  detective_arp.py  el_defensor.py  honeypot_ssh_final.py  ia_cerebro.py  threat_intel.py  vigia_red.py
data/: honeypot_status.json
scripts/defensa/: honeypot_advanced.py  radar.py  traffic_analyzer.py  zombie.py  zombie_rules.json
src/: api.rs  crypto.rs  main.rs  memory.rs  nemesis.rs  task_manager.rs
