[package]
name = "atlantis-core"
version = "0.3.0"
edition = "2021"
description = "ATLANTIS-NEXUS Core - Autonomous Agent Operating System"
authors = ["The Architect"]
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Colored output
colored = "2.1"

# Date and time handling (for Memory module)
chrono = "0.4"

# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"

# WebSockets
actix-ws = "0.3"
futures-util = "0.3"

# Environment variables
dotenv = "0.15"

# UUID for task IDs and session IDs
uuid = { version = "1", features = ["v4"] }

# Cifrado para memoria
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Para verificar PID en honeypot status
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
